--- a/app/src/main/res/layout/activity_acc_register.xml
+++ b/app/src/main/res/layout/activity_acc_register.xml
@@ -132,7 +132,7 @@
                 <EditText
                     android:id="@+id/regEtEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="73dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
