--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -34,11 +34,11 @@
             android:text="Button" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/facebookShare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Share on Facebook" />
     </LinearLayout>
 
 </android.widget.LinearLayout>
