--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -17,33 +17,74 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="178dp"
+        android:layout_height="300dp"
         android:gravity="center"
         app:srcCompat="@android:drawable/btn_star_big_on" />
+
 
     <Button
         android:id="@+id/buttonOption1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_marginBottom="5dp"
+
+        android:layout_marginTop="10dp"
+        android:background="@drawable/buttonshape2"
+        android:shadowColor="#FFFFEE"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Button"
+        android:textColor="#000000"
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/buttonOption2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_marginBottom="5dp"
+
+        android:layout_marginTop="5dp"
+        android:background="@drawable/buttonshape2"
+        android:shadowColor="#FFFFEE"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Button"
+        android:textColor="#000000"
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/buttonOption3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_marginBottom="5dp"
+
+        android:layout_marginTop="5dp"
+        android:background="@drawable/buttonshape2"
+        android:shadowColor="#FFFFEE"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Button"
+        android:textColor="#000000"
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/buttonOption4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/buttonshape2"
+        android:shadowColor="#FFFFEE"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Button"
+        android:textColor="#000000"
+        android:textSize="30sp" />
+
 
     <TextView
         android:id="@+id/textViewScore"
