--- a/app/src/main/res/layout/activity_select_quiz_difficulty.xml
+++ b/app/src/main/res/layout/activity_select_quiz_difficulty.xml
@@ -10,12 +10,24 @@
     <Spinner
         android:id="@+id/spinnerQuizDifficulty"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="100dp" />
+
+
+
 
 
     <Button
         android:id="@+id/buttonStartQuiz"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start Quiz Now" />
+        android:background="@drawable/buttonshape2"
+
+        android:shadowColor="#FFFFEE"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Start Quiz Now"
+        android:textColor="#000000"
+        android:textSize="30sp" />
 </android.widget.LinearLayout>
